voxalfa-midi/src/tests/snapshots/voxalfa_midi__tests__utils__test_repeated_loop.snap
---
source: voxalfa-midi/src/tests/utils.rs
expression: output
---
FILE: test_repeated_loop

=== SOURCE ===
[$] key={C} | time={4,4} | tempo={50} | voices={A}

---

[$] jump={DC} | repeat={2}

[A] |d :r !m :f ||

=== MIDI TRACKS ===
--- Track 0 [Tempo / Meta] ---
[00000 t / +000 t] Event 00 | Meta: Tempo(u24(1200000))
[00000 t / +000 t] Event 01 | Meta: TimeSignature(4, 2, 24, 8)
[00000 t / +000 t] Event 02 | Meta: EndOfTrack

--- Track 1 ---
[00000 t / +000 t] Event 00 | Ch 00 | NoteOn  key: 060 (C4) vel: 080
[00456 t / +456 t] Event 01 | Ch 00 | NoteOff key: 060 (C4) vel: 000
[00480 t / +024 t] Event 02 | Ch 00 | NoteOn  key: 062 (D4) vel: 080
[00936 t / +456 t] Event 03 | Ch 00 | NoteOff key: 062 (D4) vel: 000
[00960 t / +024 t] Event 04 | Ch 00 | NoteOn  key: 064 (E4) vel: 080
[01416 t / +456 t] Event 05 | Ch 00 | NoteOff key: 064 (E4) vel: 000
[01440 t / +024 t] Event 06 | Ch 00 | NoteOn  key: 065 (F4) vel: 080
[01896 t / +456 t] Event 07 | Ch 00 | NoteOff key: 065 (F4) vel: 000
[01920 t / +024 t] Event 08 | Ch 00 | NoteOn  key: 060 (C4) vel: 080
[02376 t / +456 t] Event 09 | Ch 00 | NoteOff key: 060 (C4) vel: 000
[02400 t / +024 t] Event 10 | Ch 00 | NoteOn  key: 062 (D4) vel: 080
[02856 t / +456 t] Event 11 | Ch 00 | NoteOff key: 062 (D4) vel: 000
[02880 t / +024 t] Event 12 | Ch 00 | NoteOn  key: 064 (E4) vel: 080
[03336 t / +456 t] Event 13 | Ch 00 | NoteOff key: 064 (E4) vel: 000
[03360 t / +024 t] Event 14 | Ch 00 | NoteOn  key: 065 (F4) vel: 080
[03816 t / +456 t] Event 15 | Ch 00 | NoteOff key: 065 (F4) vel: 000
[03840 t / +024 t] Event 16 | Ch 00 | NoteOn  key: 060 (C4) vel: 080
[04296 t / +456 t] Event 17 | Ch 00 | NoteOff key: 060 (C4) vel: 000
[04320 t / +024 t] Event 18 | Ch 00 | NoteOn  key: 062 (D4) vel: 080
[04776 t / +456 t] Event 19 | Ch 00 | NoteOff key: 062 (D4) vel: 000
[04800 t / +024 t] Event 20 | Ch 00 | NoteOn  key: 064 (E4) vel: 080
[05256 t / +456 t] Event 21 | Ch 00 | NoteOff key: 064 (E4) vel: 000
[05280 t / +024 t] Event 22 | Ch 00 | NoteOn  key: 065 (F4) vel: 080
[05736 t / +456 t] Event 23 | Ch 00 | NoteOff key: 065 (F4) vel: 000
[05760 t / +024 t] Event 24 | Meta: EndOfTrack
